swagger to project
